fix: overflow auto and explicit height for sidebar content (#42)
* fix: overflow auto and explicit height for sidebar content

* fix: added svh units

--- a/apps/client/src/app/profile/edit-connections/edit-connections.component.scss
+++ b/apps/client/src/app/profile/edit-connections/edit-connections.component.scss
@@ -39,8 +39,10 @@
   }
 
   .connections__content {
-    margin-top: 2rem;
-    padding: 1rem;
+    padding: 3rem 1rem 1rem 1rem;
     width: 100%;
+    overflow: auto;
+    height: calc(100vh - 5.5rem);
+    height: calc(100svh - 5.5rem);
   }
 }
